# LangOS

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
apps/langos/: mix.exs
apps/langos/lib/: langos.ex
apps/langos/test/: compat_api_test.exs  golden_test.exs  langos_test.exs  lexicon_test.exs  pack_morphology_test.exs  phase3_test.exs  stat_engine_test.exs  syntax_engine_test.exs  test_helper.exs
bench/: corpus.jsonl
chats/: 10.md
config/: config.exs  dev.exs  dev.json  dev.yaml  langos.json  langos.yaml  test.exs  test.json
crates/langos_graph/: Cargo.toml
crates/langos_graph/src/: lib.rs
crates/langos_nif/: Cargo.toml
crates/langos_nif/src/: lib.rs  native.rs
crates/langos_parser/: Cargo.toml
crates/langos_parser/src/: lib.rs
crates/langos_tokenizer/: Cargo.toml
crates/langos_tokenizer/src/: lib.rs
docs/: ARCHITECTURE.md  ENGINE_SPEC.md  EVOLUTION.md  INFRASTRUCTURE.md  LANGUAGE_PACK_GUIDE.md  MODEL_vs_PACK.md  README.md  TRAINING.md
models/de/: intent.json
models/en/: intent.json
models/fr/: intent.json
models/rw/: intent.json
models/tr/: intent.json
packs/de/: grammar.json  lexicon.json  manifest.json
packs/de/patterns/: commands.json
packs/de/tests/: golden.jsonl
packs/en/: grammar.json  lexicon.json  manifest.json  manifest.yaml
packs/en/patterns/: commands.json  (+1 more)
packs/fr/: grammar.json  lexicon.json  manifest.json
packs/rw/: grammar.json  lexicon.json  manifest.json
packs/tr/: grammar.json  lexicon.json  manifest.json
plugins/education-vocab/: vocab.json
python/langos_eval/: pyproject.toml
python/langos_sdk/: pyproject.toml
python/langos_sdk/langos_sdk/: __init__.py
python/langos_train/: pyproject.toml
python/langos_train/langos_train/: __init__.py  build.py  build_pack.py  inflect.py  seed_en.py
schemas/: express_request.v1.json  langos.proto  openapi.yaml  predicates.json  semantic_ir.v1.1.json  semantic_ir.v1.2.json  semantic_ir.v1.json  semantic_vocabulary.json  understand_request.v1.json
scripts/: install.sh
sdk/elixir/: mix.exs
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
(+79 files in other folders)
