[workspace]
members = [
  "crates/langos_tokenizer",
  "crates/langos_parser",
  "crates/langos_graph",
  "crates/langos_nif",
  "sdk/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
petgraph = "0.7"
rustler = "0.36"
