[project]
name = "langos-train"
version = "0.2.0"
description = "LangOS offline training: lexicon builder and intent model trainer (stdlib only, no external dependencies)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
langos-train = "langos_train.build:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
